--- a/trunk/Makefile.am
+++ b/trunk/Makefile.am
@@ -1,7 +1,15 @@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = parser model #graphics 
+SUBDIRS = xsdcxx model #graphics 
 
-test:	all
+all: xsdcxx model
+
+test: all test-scenarios test-checkpointing
+
+test-scenarios: all
 	./test.sh ;
+
+test-checkpointing: all
 	./testCheckpointing.sh ;
 
+doxygen: config.doxygen
+	-doxygen config.doxygen
