Linux compatibility for last changes.
git-svn-id: https://openmalaria.googlecode.com/svn@20 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -1,6 +1,6 @@
 noinst_PROGRAMS = openMalaria
 openMalaria_SOURCES =	global.cpp drug.cpp proteome.cpp Infection.cpp DescriptiveInfection.cpp withinHostModel.cpp oldWithinHostModel.cpp intervention.cpp \
-			summary.cpp event.cpp human.cpp transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp population.cpp simulation.cpp caseManagement.cpp EntoIntervention.cpp GSLWrapper.cpp openMalaria.cpp timer.cpp
+			summary.cpp event.cpp human.cpp transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp population.cpp simulation.cpp caseManagement.cpp EntoIntervention.cpp GSLWrapper.cpp openMalaria.cpp timer.cpp muellerMorbidityModel.cpp morbidityModel.cpp predetMorbidityModel.cpp pyrogenMorbidityModel.cpp
 
 openMalaria_DEPENDENCIES =  $(top_builddir)/xsdcxx/libxsdcxx.a
 
