added dummyWHM to winbuild
git-svn-id: https://openmalaria.googlecode.com/svn@56 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++BOINC.vcproj
+++ b/trunk/malariaModel2005C++BOINC.vcproj
@@ -249,6 +249,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\DummyWithinHostModel.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\empiricalWithinHostModel.h"
 				>
 			</File>
@@ -412,6 +416,10 @@
 			</File>
 			<File
 				RelativePath=".\model\drug.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\model\DummyWithinHostModel.cpp"
 				>
 			</File>
 			<File
