update win build file, solved namespace problem
git-svn-id: https://openmalaria.googlecode.com/svn@60 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++BOINC.vcproj
+++ b/trunk/malariaModel2005C++BOINC.vcproj
@@ -309,6 +309,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\OldIPTWithinHostModel.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\oldWithinHostModel.h"
 				>
 			</File>
@@ -482,6 +486,10 @@
 			</File>
 			<File
 				RelativePath=".\model\noVectorControl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\model\OldIPTWithinHostModel.cpp"
 				>
 			</File>
 			<File
