Created a NewCaseManagement class to handle CASE_MANAGEMENT_V2. Tried to update the VC++ project file by hand; hopefully it works.
git-svn-id: https://openmalaria.googlecode.com/svn@84 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/model/Makefile.am
+++ b/trunk/model/Makefile.am
@@ -7,7 +7,7 @@ openMalaria_SOURCES = openMalaria.cpp\
  withinHostModel.cpp oldWithinHostModel.cpp OldIPTWithinHostModel.cpp DummyWithinHostModel.cpp\
  intervention.cpp event.cpp human.cpp\
  transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp\
- CaseManagementModel.cpp OldCaseManagement.cpp\
+ CaseManagementModel.cpp OldCaseManagement.cpp NewCaseManagement.cpp\
  EntoIntervention.cpp\
  muellerMorbidityModel.cpp morbidityModel.cpp predetMorbidityModel.cpp pyrogenMorbidityModel.cpp
 
