--- a/trunk/malariaModel2005C++.vcproj
+++ b/trunk/malariaModel2005C++.vcproj
@@ -230,7 +230,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\include\caseManagement.h"
+				RelativePath=".\include\CaseManagementModel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\OldCaseManagement.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\NewCaseManagement.h"
 				>
 			</File>
 			<File
@@ -334,26 +342,16 @@
 			Name="model"
 			>
 			<File
-				RelativePath=".\model\caseManagement.cpp"
+				RelativePath=".\model\CaseManagementModel.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\model\OldCaseManagement.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\model\NewCaseManagement.cpp"
+				>
 			</File>
 			<File
 				RelativePath=".\model\drug.cpp"
@@ -386,24 +384,6 @@
 			<File
 				RelativePath=".\model\intervention.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\model\noVectorControl.cpp"
@@ -424,24 +404,6 @@
 			<File
 				RelativePath=".\model\proteome.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)\$(InputName)1.obj"
-						XMLDocumentationFileName="$(IntDir)\$(InputName)1.xdc"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\model\simulation.cpp"
