--- a/trunk/model/Makefile.in
+++ b/trunk/model/Makefile.in
@@ -45,16 +45,16 @@ am_openMalaria_OBJECTS = openMalaria.$(OBJEXT) GSLWrapper.$(OBJEXT) \
 	timer.$(OBJEXT) boincWrapper.$(OBJEXT) global.$(OBJEXT) \
 	summary.$(OBJEXT) population.$(OBJEXT) simulation.$(OBJEXT) \
 	drug.$(OBJEXT) proteome.$(OBJEXT) Infection.$(OBJEXT) \
-	DescriptiveInfection.$(OBJEXT) withinHostModel.$(OBJEXT) \
-	oldWithinHostModel.$(OBJEXT) OldIPTWithinHostModel.$(OBJEXT) \
-	DummyWithinHostModel.$(OBJEXT) intervention.$(OBJEXT) \
-	event.$(OBJEXT) human.$(OBJEXT) transmissionModel.$(OBJEXT) \
-	noVectorControl.$(OBJEXT) VectorControlInternal.$(OBJEXT) \
-	vectorControl.$(OBJEXT) CaseManagementModel.$(OBJEXT) \
-	OldCaseManagement.$(OBJEXT) NewCaseManagement.$(OBJEXT) \
-	EntoIntervention.$(OBJEXT) muellerMorbidityModel.$(OBJEXT) \
-	morbidityModel.$(OBJEXT) predetMorbidityModel.$(OBJEXT) \
-	pyrogenMorbidityModel.$(OBJEXT)
+	DescriptiveInfection.$(OBJEXT) DummyInfection.$(OBJEXT) \
+	withinHostModel.$(OBJEXT) oldWithinHostModel.$(OBJEXT) \
+	OldIPTWithinHostModel.$(OBJEXT) DummyWithinHostModel.$(OBJEXT) \
+	intervention.$(OBJEXT) event.$(OBJEXT) human.$(OBJEXT) \
+	transmissionModel.$(OBJEXT) noVectorControl.$(OBJEXT) \
+	VectorControlInternal.$(OBJEXT) vectorControl.$(OBJEXT) \
+	CaseManagementModel.$(OBJEXT) OldCaseManagement.$(OBJEXT) \
+	NewCaseManagement.$(OBJEXT) EntoIntervention.$(OBJEXT) \
+	muellerMorbidityModel.$(OBJEXT) morbidityModel.$(OBJEXT) \
+	predetMorbidityModel.$(OBJEXT) pyrogenMorbidityModel.$(OBJEXT)
 openMalaria_OBJECTS = $(am_openMalaria_OBJECTS)
 openMalaria_LINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) \
 	$(openMalaria_LDFLAGS) $(LDFLAGS) -o $@
@@ -178,7 +178,7 @@ openMalaria_SOURCES = openMalaria.cpp\
  GSLWrapper.cpp timer.cpp boincWrapper.cpp\
  global.cpp summary.cpp population.cpp simulation.cpp \
  drug.cpp proteome.cpp\
- Infection.cpp DescriptiveInfection.cpp\
+ Infection.cpp DescriptiveInfection.cpp DummyInfection.cpp\
  withinHostModel.cpp oldWithinHostModel.cpp OldIPTWithinHostModel.cpp DummyWithinHostModel.cpp\
  intervention.cpp event.cpp human.cpp\
  transmissionModel.cpp noVectorControl.cpp VectorControlInternal.cpp vectorControl.cpp\
@@ -239,6 +239,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CaseManagementModel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DescriptiveInfection.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DummyInfection.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DummyWithinHostModel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/EntoIntervention.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/GSLWrapper.Po@am__quote@
