Changes to windows build files and output7 (passes tests)
git-svn-id: https://openmalaria.googlecode.com/svn@94 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++.vcproj
+++ b/trunk/malariaModel2005C++.vcproj
@@ -76,7 +76,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="false"
 				AdditionalDependencies="xerces-c_static_3D.lib delayimp.lib gsl_mtd.lib cblas_mtd.lib"
-				OutputFile=".\Debug/malariaModel.exe"
+				OutputFile=".\Debug/malariacontrol_6.12_windows_intelx86"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories=".\Debug;.\lib"
