moves into infection in order to get empiricalWithinHost working
git-svn-id: https://openmalaria.googlecode.com/svn@95 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++BOINC.vcproj
+++ b/trunk/malariaModel2005C++BOINC.vcproj
@@ -249,6 +249,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\include\DummyInfection.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\DummyWithinHostModel.h"
 				>
 			</File>
