--- a/trunk/xsdcxx/Makefile.in
+++ b/trunk/xsdcxx/Makefile.in
@@ -117,6 +117,7 @@ SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
 VERSION = @VERSION@
+XSD = @XSD@
 abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
@@ -165,7 +166,8 @@ top_srcdir = @top_srcdir@
 noinst_LIBRARIES = libxsdcxx.a
 libxsdcxx_a_SOURCES = inputData.cpp scenario.cxx
 AM_CXXFLAGS = @CXXFLAGS@ -I$(top_srcdir)/xsdcxx -I$(top_srcdir)/include -static-libgcc -Wall @BOINC_CFLAGS@ #-Werror 
-XSD = xsdcxx
+
+#configure decides whether to use xsd or xsdcxx (must be in PATH)
 XSDFLAGS = --type-naming ucc --function-naming java --parser-regex '/(.+)/parse\u$$1/' --generate-doxygen
 all: all-am
 
