--- a/trunk/model/Makefile.in
+++ b/trunk/model/Makefile.in
@@ -188,7 +188,7 @@ openMalaria_SOURCES = openMalaria.cpp\
  muellerMorbidityModel.cpp morbidityModel.cpp predetMorbidityModel.cpp pyrogenMorbidityModel.cpp
 
 openMalaria_DEPENDENCIES = $(top_builddir)/xsdcxx/libxsdcxx.a
-openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ @LIB_BOINC_API@ 
+openMalaria_LDADD = $(top_builddir)/xsdcxx/libxsdcxx.a -L../lib -L$BOINC_LIB_PATH @LIB_XERC@ @LIB_GSL@ @LIB_GSLCBLAS@ @LIB_BOINC@ #@LIB_BOINC_API@ 
 AM_CXXFLAGS = @CXXFLAGS@ -static-libgcc -Wall @BOINC_CFLAGS@ -I$(top_srcdir)/include -I$(top_srcdir)/xsdcxx #-Werror
 @DARWIN_FALSE@openMalaria_LDFLAGS = @BOINC_LDFLAGS@
 @DARWIN_TRUE@openMalaria_LDFLAGS = @BOINC_LDFLAGS@ -framework Carbon
