Also link in libstdc++.a
git-svn-id: https://openmalaria.googlecode.com/svn@105 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -60,7 +60,7 @@ if test "${deploy}" = yes ; then
     CHECK_BOINC
     
     # statically link libgcc
-    export LDFLAGS="$LDFLAGS -static-libgcc"
+    export LDFLAGS="$LDFLAGS -static-libgcc -lstdc++"
 else
     build_state='local'
     AC_SUBST(LIB_XERC, "")
