Change to pthread check.
git-svn-id: https://openmalaria.googlecode.com/svn@106 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -81,7 +81,7 @@ fi
 
 
 #check posix threads
-AC_CHECK_LIB(pthread,main,, [AC_MSG_FAILURE([pthread not present])])
+AC_CHECK_LIB(pthread,pthread_create,, [AC_MSG_FAILURE([pthread not present])])
 
 dnl Check for glut In the future we will check for the good glut
 AX_CHECK_GL="-lGL"
