Separated out more IPT code (it should all be in OldIPT* files now). Still haven't cured the memory leak :(
git-svn-id: https://openmalaria.googlecode.com/svn@118 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/trunk/malariaModel2005C++.vcproj
+++ b/trunk/malariaModel2005C++.vcproj
@@ -258,7 +258,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\include\infection.h"
+				RelativePath=".\include\Infection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\DescriptiveInfection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\DummyInfection.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\OldIPTInfection.h"
 				>
 			</File>
 			<File
@@ -354,6 +366,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\model\OldIPTInfection.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\model\drug.cpp"
 				>
 			</File>
@@ -386,7 +402,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\model\infection.cpp"
+				RelativePath=".\model\Infection.cpp"
 				>
 			</File>
 			<File
